--- a/style.css
+++ b/style.css
@@ -3,19 +3,58 @@ body, html {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
   }
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+ul {
+    list-style: none;
+    background: #22438C;
+}
+ul li {
+    display: inline-block;
+    position: relative;
+}
+ul li a {
+    display: block;
+    padding: 20px 25px;
+    color: #FFF;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px
+}
+ul li ul.dropdown li {
+    display: block;
+}
+ul li ul.dropdown {
+    width: 100%;
+    background: #22438C;
+    position: absolute;
+    z-index: 9999;
+    display: none;
+}
+ul li a:hover {
+    background: #112C66;
+}
+ul li:hover ul.dropdown {
+    display: block;
+}
+
 .navbar {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: -225;
+    padding: 225;
     overflow: hidden;
     background-color: #333;
   }
   
-  .navbar li {
+.navbar li {
     float: left;
   }
   
-  .navbar li a {
+.navbar li a {
     display: block;
     color: white;
     text-align: center;
@@ -24,7 +63,7 @@ body, html {
   }
   
   /* Change the link color to #111 (black) on hover */
-  .navbar li a:hover {
+.navbar li a:hover {
     background-color: #111;
   }
 
