--- a/style.css
+++ b/style.css
@@ -142,17 +142,26 @@ h1 {
 .textblock h2 {
     font-size: 30pt;
     font-weight: bold;
+    line-height: 3em;
 }
 
 .textblock h3 {
-    font-size: 14pt;
+    font-size: 17pt;
     text-align: left;
+    line-height: 3em;
 }
 
 .textblock h4 {
     font-size: 20pt;
     font-weight: bold;
     text-align: left;
+}
+
+.textblock h5 {
+    font-size: 13pt;
+    text-align: left;
+    line-height: 2em;
+    font-weight: normal;
 }
 
 .Recipe-List {
@@ -248,5 +257,5 @@ h1 {
 .routine-Info li {
     font-size: 16pt;
     font-weight: bold;
-    padding-top: 1rem;
+    padding-top: 5rem;
 }
