--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body, html {
     height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: whitesmoke;
   }
 
 * {
@@ -9,10 +10,7 @@ body, html {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-ul {
-    list-style: none;
-    background: #22438C;
-}
+
 ul li {
     display: inline-block;
     position: relative;
@@ -20,7 +18,7 @@ ul li {
 ul li a {
     display: block;
     padding: 20px 25px;
-    color: #FFF;
+    color:#FFF;
     text-decoration: none;
     text-align: center;
     font-size: 20px
@@ -51,29 +49,31 @@ ul li:hover ul.dropdown {
   }
   
 .navbar li {
-    float: left;
+    float:none;
   }
   
 .navbar li a {
     display: block;
-    color: white;
+    color: whitesmoke;
     text-align: center;
     padding: 14px 30px;
     text-decoration: none;
   }
   
-  /* Change the link color to #111 (black) on hover */
+  /* Change the link color on hover */
 .navbar li a:hover {
-    background-color: #111;
+    background-color: 	#a4b1a0;
   }
 
 h1 {
     margin-top: 6rem;
     text-align: center;
+    color: 	whitesmoke;
+    font-family:Georgia, 'Times New Roman', Times, serif
 }
 
 .home-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/temp.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/home.jpg");
     height: 100%;
     background-attachment: fixed;
     background-position: center;
@@ -88,12 +88,11 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
     font-size: 250%;
 }
 
 .issue-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/temp.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/issue-image.jpg");
     height: 100%;
     background-attachment: fixed;
     background-position: center;
@@ -103,7 +102,7 @@ h1 {
 }
 
 .routine-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/temp.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/routine-image.jpg");
     height: 100%;
     background-attachment: fixed;
     background-position: center;
@@ -112,8 +111,8 @@ h1 {
     position: relative;
 }
 
-.Products-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/temp.jpg");
+.products-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/products.png");
     height: 100%;
     background-attachment: fixed;
     background-position: center;
@@ -133,26 +132,30 @@ h1 {
 }
 
 .textblock {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 0px;
+    padding-bottom: 50px;
     padding-left: 100px;
     padding-right: 100px;
   }
 
 .textblock h2 {
+    font-family: 'Times New Roman', Times, serif;
     font-size: 30pt;
     font-weight: bold;
     line-height: 3em;
 }
 
 .textblock h3 {
-    font-size: 17pt;
-    text-align: left;
-    line-height: 3em;
+    font-size: 16pt;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    text-align: center;
+    line-height: 2em;
+    font-weight: normal;
 }
 
 .textblock h4 {
-    font-size: 20pt;
+    font-size: 25pt;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     text-align: left;
 }
@@ -162,12 +165,22 @@ h1 {
     text-align: left;
     line-height: 2em;
     font-weight: normal;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.Recipe-List {
-    font-size: 24pt;
-    font-weight: bold;
+.textblock h6 {
+    font-size: 13pt;
     text-align: center;
+    line-height: 2em;
+    font-weight: normal;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.textblock h7 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20pt;
+    font-weight: bold;
+    line-height: 3em;
 }
 
 .Product-li {
@@ -178,17 +191,26 @@ h1 {
   
   .Product-li a {
     display: block;
-    color: rgb(255, 254, 254);
+    color: white;
+    font-weight: bold;
+    font-size: 25pt;
     text-align: center;
-    padding: 14px 16px;
+    padding: 25px;
     text-decoration: none;
+    font-family:'Times New Roman', Times, serif;
+    background-color: #a4b1a0;
+    margin-top: 5px;
+    border-radius: 25%;
+
   }
   
-  /* Change the link color to #111 (black) on hover */
+  /* Change the link color on hover */
   .Product-li a:hover {
-    background-color: white;
-    color: blue;
+    background-color:  	#adc3b7;
+    color: white;
     text-align: center;
+    margin-top: 5px;
+    border-radius: 25%;
   }
 
 
@@ -202,23 +224,23 @@ h1 {
  .row {
      display: flex;
      flex-wrap: wrap;
-     padding: 15 30px;
+     padding: 15px 30px;
      justify-content: center;
-     text-align: center;
+
  }
- 
- /* Create 3 equal columns that sit next to each other */
+
  .column {
      flex: 25%;
      max-width: 25%;
      padding: 0 4px;
-     text-align: center;
+
  }
  
  .column img {
      margin-top: 8px;
      vertical-align: middle;
      width: 100%;
+     border: 5px solid #849d90;
  }
 
 .Product-Info {
@@ -259,3 +281,25 @@ h1 {
     font-weight: bold;
     padding-top: 5rem;
 }
+
+a {
+    color: 	#849d90;
+    text-decoration: none;
+    font-size: 15pt;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+a:hover {
+    color:  	#bdc9bb;
+}
+
+footer {
+    background-color: #a4b1a0;
+    height: 1%;
+    margin-top: 50px;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: white;
+    font-size: 30pt;
+    vertical-align: middle;
+  }
